--- a/PilotDemo/PilotDemo/Info.plist
+++ b/PilotDemo/PilotDemo/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app uses the local network to communicate with other devices for remote control functionality.</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_storyboard._tcp</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationPreferredDefaultSceneSessionRole</key>
